# whisper-echo

./: CMakeLists.txt  README.md  command.json  uinput-group.sh
src/: audio_capture.cpp  audio_capture.h  audio_utils.cpp  audio_utils.h  commands.cpp  commands.h  stream.cpp  uinput.cpp  uinput.h
